[package]
name = "autd"
version = "6.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "AUTD library for Rust."
repository = "https://github.com/sssssssuzuki/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
    "dist/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd-gain = "6"
autd-modulation = "1"
autd-link = "1"
autd-core = "6"
autd-sequence = "6"
autd-timer = "1.2"
autd-geometry = "1.1"
num = "0.2"

[dev-dependencies]
autd-soem-link = "5.0.0"
