[package]
name = "autd-examples"
version = "6.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"
publish = false

[[bin]]
name = "soem"
path = "src/soem.rs"

[[bin]]
name = "twincat"
path = "src/twincat.rs"
required-features = ["twincat"]

[[bin]]
name = "two_autd"
path = "src/two_autd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd = {path="../autd", version="6"}
autd-soem-link = {path="../autd-soem-link", version="6.1"}
autd-twincat-link  = {path="../autd-twincat-link", version="6.1", optional = true}
autd-holo-gain = {path="../autd-holo-gain", version="6.1", optional = true}
autd-csv-gain =  {path="../autd-csv-gain", version="6.1", optional = true}
autd-wav-modulation = {path="../autd-wav-modulation", version="6.1", optional = true}
colored = "1.9"
csv =  {version = "1.1", optional = true}
hound =  {version = "3.4", optional = true}

[features]
default = []
twincat = ["autd-twincat-link"]
hologain = ["autd-holo-gain"]
csvgain = ["autd-csv-gain", "csv"]
wavmodulation = ["autd-wav-modulation", "hound"]
all = ["twincat", "hologain", "csvgain", "wavmodulation"]
