[package]
name = "autd-holo-gain"
version = "6.1.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "CSV Gain for AUTD."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd = {path="../autd", version="6"}
na = "0.21"
rand = "0.7"
num-complex = "0.2"
