[package]
name = "autd-holo-gain"
version = "8.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Holo (Multiple foci) Gain for AUTD."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd = {path="../autd", version="8"}
na = "0.23.0"
rand = "0.8.0"
num-complex = "0.3.1"
itertools = "0.10.0"
num-traits = "0.2.14"

