[package]
name = "autd-soem-link"
version = "6.1.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Link of AUTD using SOEM."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
autd = {path="../autd", version="6"}
autd-timer = {path="../autd-timer", version="1.2"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["threadpoollegacyapiset", "errhandlingapi", "handleapi", "winerror", "processthreadsapi"] }

[build-dependencies]
cc = "1.0"
