[package]
name = "autd-soem-link"
version = "8.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Link of AUTD using SOEM."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
autd = {path="../autd", version="8.0.1"}
autd-timer = {path="../autd-timer", version="2.0.0"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["threadpoollegacyapiset", "errhandlingapi", "handleapi", "winerror", "processthreadsapi"] }

[build-dependencies]
cc = "1.0"
