[package]
name = "autd-timer"
version = "2.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Native timer wrapper."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["threadpoollegacyapiset", "timeapi", "mmsystem", "basetsd"] }

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
