[package]
name = "autd-twincat-link"
version = "6.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Link of AUTD using TwinCAT."
repository = "https://github.com/sssssssuzuki/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libloading = "0.5"
lazy_static = "1.4"
autd = {path="../autd", version="6"}

[build-dependencies]
cc = "1.0"
