[package]
name = "autd-twincat-link"
version = "8.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Link of AUTD using TwinCAT."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libloading = "0.6.6"
lazy_static = "1.4"
autd = {path="../autd", version="8.0.1"}

[build-dependencies]
cc = "1.0"
