[package]
name = "autd-wav-modulation"
version = "8.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Wav Modulation for AUTD."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd = {path="../autd", version="8"}
hound = "3.4"
