[package]
name = "autd3-core"
version = "1.6.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Core functions of AUTD3"
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bitflags = "1.2.1"
nalgebra = "0.28.0"
thiserror = "1.0.25"
autd3-traits = {path="../autd3-traits", version="1.6.0"}

[features]
phase_inverted = []
default = ["phase_inverted"]
all = ["phase_inverted"]
