[package]
name = "autd3-driver"
version = "2.0.3"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license-file = "LICENSE"
description = "AUTD3 driver"
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]

[dependencies]
anyhow = "1.0.57"
bitflags = "1.3.2"
thiserror = "1.0.31"
