[package]
name = "autd3-emulator-link"
version = "1.10.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "Link for emulator"
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd3-core = {path="../autd3-core", version="1.9.3"}
anyhow = "1.0.40"
