[package]
name = "autd3-examples"
version = "1.7.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "soem"
path = "src/soem.rs"
required-features = ["soem"]

[[bin]]
name = "twincat"
path = "src/twincat.rs"
required-features = ["twincat"]

[[bin]]
name = "emulator"
path = "src/emulator.rs"
required-features = ["emulator"]

[dependencies]
anyhow = "1.0.41"
autd3 = {path="../autd3", version="1.7.1"}
autd3-soem-link = {path="../autd3-soem-link", version="1.6.0", optional = true}
autd3-twincat-link  = {path="../autd3-twincat-link", version="1.0.0", optional = true}
autd3-emulator-link  = {path="../autd3-emulator-link", version="1.6.0", optional = true}
autd3-holo-gain  = {path="../autd3-holo-gain", version="1.6.0"}
colored = "2.0.0"
tokio = { version = "1.6.1", features = ["rt", "time", "rt-multi-thread"]}

[features] 
default = []
twincat = ["autd3-twincat-link"]
emulator = ["autd3-emulator-link"]
soem = ["autd3-soem-link"]
all = ["twincat", "soem", "emulator"]
