[package]
name = "autd3-examples"
version = "2.2.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

[[bin]]
name = "debug"
path = "src/debug.rs"
required-features = ["debug"]

[[bin]]
name = "soem"
path = "src/soem.rs"
required-features = ["soem"]

[[bin]]
name = "twincat"
path = "src/twincat.rs"
required-features = ["twincat"]

[[bin]]
name = "emulator"
path = "src/emulator.rs"
required-features = ["emulator"]

[dependencies]
anyhow = "1.0.57"
autd3 = {path="../autd3"}
autd3-gain-holo = {path="../autd3-gain-holo", version="2.2.1"}
autd3-link-debug = {path="../autd3-link-debug", optional = true, version="2.2.1"}
autd3-link-emulator = {path="../autd3-link-emulator", optional = true, version="2.2.1"}
autd3-link-soem = {path="../autd3-link-soem", optional = true, version="2.2.1"}
autd3-link-twincat = {path="../autd3-link-twincat", optional = true, version="2.2.1"}
colored = "2.0.0"
simplelog = {version = "0.12.0", optional = true}

[features] 
default = []
debug = ["autd3-link-debug", "simplelog"]
emulator = ["autd3-link-emulator"]
soem = ["autd3-link-soem"]
twincat = ["autd3-link-twincat"]
all = ["debug", "soem", "twincat", "emulator"]
