[package]
name = "autd3-firmware-emulator"
version = "2.0.3"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license-file = "LICENSE"
description = "AUTD3 firmware emulator"
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]

[dependencies]
autd3-driver = {path = "../autd3-driver", version="2.0.2"}
num-integer = "0.1.45"
