[package]
name = "autd3-gain-holo"
version = "2.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license-file = "LICENSE"
description = "Holo (Multiple foci) Gain for AUTD."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]

[dependencies]
anyhow = "1.0.57"
autd3-core = {path="../autd3-core"}
autd3-traits = {path="../autd3-traits"}
nalgebra = "0.31.0"
rand = "0.8.5"
thiserror = "1.0.31"
