[package]
name = "autd3-holo-gain"
version = "1.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "Holo (Multiple foci) Gain for AUTD."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.2"
autd3-core = {path="../autd3-core", version="1.1.0"}
autd3-traits = {path="../autd3-traits", version="1.0.0"}
itertools = "0.10.0"
rand = "0.8.3"
thiserror = "1.0.25"
anyhow = "1.0.40"
