[package]
name = "autd3-soem-link"
version = "1.9.2"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license-file = "LICENSE"
description = "Link of AUTD using SOEM."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.95"
autd3-core = {path="../autd3-core", version="1.9.2"}
autd3-timer = {path="../autd3-timer", version="1.9.2"}
anyhow = "1.0.40"
thiserror = "1.0.25"

[build-dependencies]
cc = { version = "1.0.68", features = ["parallel"] }
glob = "0.3.0"
bindgen = "0.59.1"
