[package]
name = "autd3-twincat-link"
version = "1.10.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "Link of AUTD using TwinCAT."
repository = "https://github.com/shinolab/rust-autd"
readme = "README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd3-core = {path="../autd3-core", version="1.9.3"}
anyhow = "1.0.40"
thiserror = "1.0.25"
once_cell = "1.7.2"
libloading = "0.7.1"
libc = "0.2.95"
