[package]
name = "autd3"
version = "1.8.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

license = "MIT"
description = "AUTD library for Rust."
repository = "https://github.com/shinolab/rust-autd"
readme = "../README.md"
keywords = ["autd"]
exclude = [
    ".github/*",
    "dist/*",
]
 
[dependencies]
anyhow = "1.0.41"
nalgebra = "0.28.0"
autd3-core = {path="../autd3-core", version="1.8.0"}
autd3-traits = {path="../autd3-traits", version="1.8.0"}
autd3-timer = {path="../autd3-timer", version="1.8.0"}
num = "0.4.0"
thiserror = "1.0.25"

[features]
phase_inverted = ["autd3-core/phase_inverted"]
default = ["phase_inverted"]
all = ["phase_inverted"]
