[package]
name = "autd3"
version = "2.2.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license-file = "LICENSE"
description = "AUTD library for Rust."
repository = "https://github.com/shinolab/rust-autd"
readme = "../README.md"
keywords = ["autd"]

[dependencies]
anyhow = "1.0.57"
autd3-core = {path="../autd3-core", version="2.2.1"}
autd3-traits = {path="../autd3-traits", version="2.2.1"}
itertools = "0.10.3"
nalgebra = "0.31.0"
num = "0.4.0"
thiserror = "1.0.31"
